Made changes in Navbar

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGO_URL= #Add your mongoDB server link here
+MONGO_URL= mongodb+srv://iec2021065:shashi123@cluster0.ncbdq3t.mongodb.net/expenseTracker
